--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Honda-CBR</title>
+    <link rel="shortcut icon" href="10-honda-car-logo-png-brand-image.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/6c41c55e45.js" crossorigin="anonymous"></script>
     <!-- CSS only -->
@@ -178,7 +179,7 @@
         <div class="row row-cols-1 row-cols-md-3 g-4">
           <div class="col">
             <div class="card border-0 shadow pb-4 h-100">
-              <img src="bike-1.png" class="card-img-top p-3" alt="...">
+              <img src="bike-1.png" class="card-img-top p-4" alt="...">
               <div class="card-body">
                 <h2 class="card-title fw-bold">Ducati XDIAVEL S-73</h2>
                 <p class="card-text color2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at</p>
@@ -190,7 +191,7 @@
           </div>
           <div class="col">
             <div class="card border-0 shadow h-100 pb-4">
-              <img src="bike-2.png"card-img-top p-3" alt="...">
+              <img src="bike-2.png"class="card-img-top p-4" alt="...">
               <div class="card-body">
                 <h2 class="card-title fw-bold">2021 Honda CBR500R</h2>
                 <p class="card-text color2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at</p>
@@ -202,7 +203,7 @@
           </div>
           <div class="col">
             <div class="card border-0 shadow h-100 pb-4">
-              <img src="bike-3.png" class="card-img-top p-3" alt="...">
+              <img src="bike-3.png" class="card-img-top p-4" alt="...">
               <div class="card-body">
                 <h2 class="card-title fw-bold">Motorcycles & Scooters</h2>
                 <p class="card-text color2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at</p>
